--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "SugaryAutocomplete",
+  "name": "Autocomplete",
   "version": "1.0.0",
   "author": "Jose Martos",
-  "description": "",
+  "description": "Plain JavaScript autocomplete with some ES6 sugar",
   "license": "",
   "devDependencies": {
     "axios": "^0.15.3",
@@ -12,13 +12,10 @@
     "babel-register": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
-    "chalk": "^1.1.3",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.2.1",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
-    "gulp-load-plugins": "^1.4.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^2.0.0",
@@ -36,6 +33,7 @@
   "browser": {
     "utils": "./source/scripts/common/utils",
     "autoComplete": "./source/scripts/common/auto-complete",
+    
     "home": "./source/scripts/pages/home"
   }
 }
