--- a/package.json
+++ b/package.json
@@ -1,39 +1,50 @@
 {
-  "name": "Autocomplete",
+  "name": "autocomplete",
   "version": "1.0.0",
   "author": "Jose Martos",
   "description": "Plain JavaScript autocomplete with some ES6 sugar",
   "license": "",
+  "scripts": {
+    "watch": "gulp watch",
+    "build": "gulp build",
+    "lint": "gulp lintjs"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
+  },
   "devDependencies": {
-    "axios": "^0.15.3",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.2.1",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-eslint": "^10.0.2",
+    "babelify": "^10.0.0",
+    "browserify": "^16.3.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
-    "gulp-jshint": "^2.0.4",
+    "gulp-eslint": "^6.0.0",
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.7",
-    "jshint": "^2.9.4",
-    "jshint-stylish": "^2.2.1",
     "node-bourbon": "^4.2.8",
     "path": "^0.12.7",
-    "run-sequence": "^1.2.2",
     "susy": "^2.2.12",
     "through2": "^2.0.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
-  "browser": {
-    "utils": "./source/scripts/common/utils",
-    "autoComplete": "./source/scripts/common/auto-complete",
-    
-    "home": "./source/scripts/pages/home"
-  }
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 ChromeAndroid versions",
+    "last 2 Firefox versions",
+    "last 2 FirefoxAndroid versions",
+    "last 2 Safari versions",
+    "last 2 iOS versions",
+    "last 2 Edge versions",
+    "last 2 Opera versions",
+    "last 2 OperaMobile versions"
+  ]
 }
